--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,10 +6,16 @@
   height: 33px;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 880px) {
+  .header__logo {
+    padding-left: 27px;
+  }
+}
+
+@media (max-width: 450px) {
   .header__logo {
   width: 104px;
   height: 24px;
-  padding: 0 0 31px 27px;
+  padding-bottom: 31px;
   }
 }
