--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -1,4 +1,4 @@
-.element__button {
+.element__like-button {
   margin: 0 20px 0 0;
   padding: 0;
   border: none;
@@ -7,4 +7,9 @@
   background-color: #fff;
   width: 22px;
   height: 19px;
+  transition: opacity .3s ease;
+}
+
+.element__like-button:hover {
+  opacity: 0.5;
 }
