--- a/blocks/header/__line/header__line.css
+++ b/blocks/header/__line/header__line.css
@@ -4,7 +4,7 @@
   max-width: 880px;
   height: 0;
   opacity: 0.7;
-  border: 1px solid #545454;
+  border-bottom: 1px solid #545454;
 }
 
 @media (max-width: 450px) {
