--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,6 +1,6 @@
 .profile__edit-button {
   margin: 0;
-  padding: 0;
+  padding-left: 10px;
   border: 1px solid #FFF;
   box-sizing: border-box;
   border-radius: 2px;
