--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -18,3 +18,12 @@
 .popup__close-button:hover {
   opacity: 0.6;
 }
+
+@media (max-width: 550px) {
+  .popup__close-button {
+    width: 20px;
+  height: 20px; 
+    top: -36px;
+    right: 0;
+  }
+}
