--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,3 +7,10 @@
   background: rgba(255, 255, 255, 1);
   border-radius: 10px;
 }
+
+@media (max-width: 550px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+  }
+}
