--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,15 +7,6 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
+  background: rgba(0, 0, 0, 0.5);
 }
 
-.popup:before {
-  content: '';
-  position: absolute;
-  background-color: #000;
-  opacity: 0.5;
-  width: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-}
