--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,15 +1,14 @@
 .popup__input {
-margin: 0 36px;
-width: 358px;
-height: 27px;
-border: 0;
-box-sizing: border-box;
-border-bottom: 1px solid #000000;
-background-color: transparent;
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 17px;
+  margin: 0 36px;
+  width: 358px;
+  border: 0;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: transparent;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
 }
 
 .popup__input:first-of-type {
@@ -17,8 +16,14 @@ line-height: 17px;
 }
 
 @media (max-width: 550px) {
-.popup__name {
-  width: 238px;
-  margin: 0 22px 30px;
+  .popup__input {
+    width: 238px;
+    margin: 0 22px 30px;
+  }
 }
+
+@media (max-width: 550px) {
+  .popup__input:first-of-type {
+    margin-bottom: 35px;
+  }
 }
