--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,15 @@
 .header {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  padding: 45px 0 39px;
+  margin: 45px auto 39px;
   justify-content: space-between;
   max-width: 880px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media (max-width: 450px) {
   .header {
-  max-width: 100%;
-  padding: 28px 0 42px;
+    max-width: 100%;
+    margin: 28px 0 42px;
   }
 }
