--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,18 +1,15 @@
 .popup__container {
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  padding: 0;
   width: 430px;
-  height: 330px;
   position: relative;
   background: rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
 
 @media (max-width: 550px) {
   .popup__container {
     width: 282px;
-    height: 322px;
   }
 }
-
-
