--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,7 +1,7 @@
 .popup__save-button {
-  margin: 48px 36px 37px;
+  margin: 55px 36px 37px;
   padding: 0;
-  border: 2px solid #000;
+  border: 0;
   box-sizing: border-box;
   border-radius: 2px;
   align-self: center;
@@ -28,7 +28,7 @@
   .popup__save-button {
     width: 238px;
     height: 46px;
-    margin: 45px 22px 25px;
+    margin: 25px 22px;
     font-size: 14px;
     line-height: 17px;
   }
