--- a/blocks/profile/__caption/profile__caption.css
+++ b/blocks/profile/__caption/profile__caption.css
@@ -9,13 +9,14 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 336px;
 }
 
 @media (max-width: 680px) {
   .profile__caption {
     font-size: 14px;
     line-height: 17px;
-    text-align: center;
     padding-top: 7px;
+    max-width: 282px;
   }
 }
