--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,17 +1,16 @@
 .profile__edit-button {
   margin: 0;
-  border: 1px solid #FFF;
+  border: 1px solid #fff;
   box-sizing: border-box;
-  border-radius: 2px;
   align-self: center;
-  background: #000;
+  background: transparent;
   background-image: url(../../../images/EditButton.svg);
   width: 24px;
   height: 24px;
   cursor: pointer;
   background-position: center;
   background-repeat: no-repeat;
-  transition: opacity .3s ease;
+  transition: opacity 0.3s ease;
 }
 
 .profile__edit-button:hover {
