--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -4,7 +4,7 @@
   border: none;
   cursor: pointer;
   background-color: #fff;
-  background-image: url(../../../images/Like.svg);
+  background-image: url(../../../images/like.svg);
   width: 22px;
   height: 19px;
   transition: opacity 0.3s ease;
