--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,5 +1,6 @@
 .popup__input {
-  margin: 0 36px;
+  margin: 0 36px 5px;
+  padding: 0;
   width: 358px;
   border: 0;
   box-sizing: border-box;
@@ -11,19 +12,9 @@
   line-height: 17px;
 }
 
-.popup__input:first-of-type {
-  margin-bottom: 30px;
-}
-
 @media (max-width: 550px) {
   .popup__input {
     width: 238px;
-    margin: 0 22px 30px;
-  }
-}
-
-@media (max-width: 550px) {
-  .popup__input:first-of-type {
-    margin-bottom: 35px;
+    margin: 0 22px 5px;
   }
 }
