--- a/src/blocks/element/__like-container/element__like-container.css
+++ b/src/blocks/element/__like-container/element__like-container.css
@@ -1,7 +1,7 @@
-.element__description {
+.element__like-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0 21px;
-  background-color: #fff;
+  margin: 0 20px 0 0;
 }
