--- a/src/blocks/element/element.css
+++ b/src/blocks/element/element.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   max-width: 282px;
+  max-height: 361px;
   border-radius: 10px;
   overflow: hidden;
   background-color: #fff;
